[package]
name = "lan-drop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
local-ip-address = "0.6"
qr2term = "0.3"
tower-http = { version = "0.5", features = ["fs", "set-header"] }
tokio-util = { version = "0.7", features = ["io"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.11"
